--- a/netlify.toml
+++ b/netlify.toml
@@ -7,10 +7,10 @@
 [build.environment]
   NODE_VERSION = "18"
 
-# Redirect API calls to backend (update with your Render URL)
+# Redirect API calls to backend
 [[redirects]]
   from = "/api/*"
-  to = "https://your-render-api.onrender.com/api/:splat"
+  to = "https://full-stack-p0an.onrender.com/api/:splat"
   status = 200
   force = true
 
